--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <title>Smart Studio</title>
 
         <!--LOCAL CSS-->
+        <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="css/login.css">
 
         <!--CDN'S CSS-->
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Iceberg|Kodchasan|Nova+Cut|Oswald" rel="stylesheet">
     </head>
 
     <body ng-app="main">
@@ -26,6 +29,9 @@
 
 
         <!--MY JS-->
+        <script src="js/configuration.js"></script>
+        <script src="services/loginService.js"></script>
+        <script src="js/controllers.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
