--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 
         <!--MY JS-->
-        <script src="js/configuration.js"></script>
-        <script src="services/loginService.js"></script>
-        <script src="js/controllers.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/services.js"></script>
+        <script src="js/configuration.js"></script>
     </body>
 </html>
