--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
         <!--LOCAL CSS-->
         <link rel="stylesheet" href="css/custom.css">
         <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/home.css">
 
         <!--CDN'S CSS-->
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.css">
         <link href="https://fonts.googleapis.com/css?family=Iceberg|Kodchasan|Nova+Cut|Oswald" rel="stylesheet">
+
+        <!--LOCAL JS-->
+        <script src="js/configuration.js"></script>
+
+        <!--CDN'S JS-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback=initMap" async defer></script>
+
     </head>
 
     <body ng-app="main">
@@ -28,11 +36,9 @@
         <!--CDN'S JS-->
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.10/angular-material.min.js"></script>
 
-
         <!--MY JS-->
         <script src="js/main.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/services.js"></script>
-        <script src="js/configuration.js"></script>
     </body>
 </html>
