--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/custom.css">
         <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="css/home.css">
+        <link rel="stylesheet" href="css/recover-password.css">
 
         <!--CDN'S CSS-->
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.css">
