REFACTORING: login, changePassword, homeMenu
Cambiata la grafica della pagina di login e cambio password dopo aver parlato con Saverio, Cambiato anche il colore del menu applicando la palette scelta da Saverio (cyan)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </head>
 
     <body ng-app="main">
+        <div id="image-blur"></div>
         <div ng-view id="mainContent"></div>
 
         <!--DEFAULT JS-->
