--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
         <!--LOCAL JS-->
         <script src="js/configuration.js"></script>
+        <!--<script src="js/map.js"></script>-->
 
         <!--CDN'S JS-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback=initMap" async defer></script>
-
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback" async defer></script>
+        <!--<script src="http://maps.google.com/maps/api/js"></script>-->
     </head>
 
     <body ng-app="main">
@@ -29,6 +30,8 @@
 
         <!--DEFAULT JS-->
         <script src="js/default/angular.min.js"></script>
+        <script src="js/default/bower_components/ng-websocket/ng-websocket.js"></script>
+        <script src="js/default/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
         <script src="js/default/angular-route.js"></script>
         <script src="js/default/angular-animate.js"></script>
         <script src="js/default/angular-aria.js"></script>
