--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
     </head>
 
     <body ng-app="main">
-        <div id="image-blur"></div>
         <div ng-view id="mainContent"></div>
 
         <!--DEFAULT JS-->
         <script src="js/default/angular.min.js"></script>
-        <script src="js/default/bower_components/ng-websocket/ng-websocket.js"></script>
+        <!--<script src="js/default/bower_components/ng-websocket/ng-websocket.js"></script>-->
         <script src="js/default/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
         <script src="js/default/angular-route.js"></script>
         <script src="js/default/angular-animate.js"></script>
@@ -45,5 +44,6 @@
         <script src="js/main.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/services.js"></script>
+        <script src="js/helper.js"></script>
     </body>
 </html>
