--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/recover-password.css">
+        <link rel="stylesheet" href="css/canvas.css">
 
         <!--CDN'S CSS-->
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.css">
@@ -41,9 +42,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.10/angular-material.min.js"></script>
 
         <!--MY JS-->
+        <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/services.js"></script>
-        <script src="js/helper.js"></script>
     </body>
 </html>
