COMMIT BEFORE CHANGING ROUTE TO UI-ROUTER

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <!--DEFAULT JS-->
         <script src="js/default/angular.min.js"></script>
+        <script src="js/default/angular-ui-router.min.js"></script>
         <script src="js/default/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
         <script src="js/default/angular-route.js"></script>
         <script src="js/default/angular-animate.js"></script>
