UI-ROUTER IMPLEMENTATION, LOGIN, LOAD MAP, INSERT LOCATION
Implementato il routing con ui-router, implementato il login il caricamento dei marker sulla mappa e l'inserimento di una nuova posizione sulla mappa

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <body ng-app="main">
         <div ng-view id="mainContent"></div>
 
+        <ui-view></ui-view>
+
         <!--DEFAULT JS-->
         <script src="js/default/angular.min.js"></script>
         <script src="js/default/angular-ui-router.min.js"></script>
