HISTORY, CHANGE PASSWORD, LOGOUT
Implementata la history con filtro per evento e per tag.
Implementato il cambio password con la gestione degli errori.
Implementato il logout

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/recover-password.css">
         <link rel="stylesheet" href="css/canvas.css">
         <link rel="stylesheet" href="css/menu.css">
+        <link rel="stylesheet" href="css/popup.css">
         <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
 
 
