--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <!--<script src="js/map.js"></script>-->
 
         <!--CDN'S JS-->
+        <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback" async defer></script>
         <!--<script src="http://maps.google.com/maps/api/js"></script>-->
     </head>
