--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.10/angular-material.min.js"></script>
 
         <!--MY JS-->
+        <script src="js/default/fabric.js"></script>
         <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers.js"></script>
