--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!--CDN'S JS-->
         <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?v=weekly&key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback" async defer></script>
         <!--<script src="http://maps.google.com/maps/api/js"></script>-->
     </head>
 
@@ -45,6 +45,8 @@
         <!--<script src="js/default/angular-material.min.js"></script>-->
         <script src="js/default/angular-messages.js"></script>
         <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
+        <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
 
         <!--CDN'S JS-->
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.10/angular-material.min.js"></script>
