LANGUAGE MANUAL MERGING, BUG FIX VERSION 1
Inserita la traduzzione sulla versione principale
Risolto il bug che sul cloud l'inserimento di un floor perdeva la risposta di avvenuto inserimento
Sistemato il pulsante fullscreen
Inserito nella evacuation zone la select al posto dei chips

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <script src="js/default/fabric.js"></script>
         <script src="js/main.js"></script>
         <script src="js/services.js"></script>
+        <script src="resources/lang/english.js"></script>
         <script src="js/controllers.js"></script>
     </body>
 </html>
