--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <script src="js/default/fabric.js"></script>
         <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
+        <script src="resources/lang/italian.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/services.js"></script>
     </body>
