--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!--CDN'S JS-->
         <script src="js/default/markerclusterer.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?v=weekly&key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&callback" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&libraries=drawing" async defer></script>
     </head>
 
     <body ng-app="main">
@@ -49,7 +49,7 @@
         <script src="js/default/angular-material.min.js"></script>
 
         <!--MY JS-->
-        <script src="js/default/fabric.js"></script>
+<!--        <script src="js/default/fabric.js"></script>-->
         <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
         <script src="resources/lang/italian.js"></script>
