--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
         <script src="js/default/Chart.min.js"></script>
         <script src="js/default/angular-chart.min.js"></script>
 
+        <script src="js/default/Blob.js"></script>
+        <script src="js/default/FileSaver.min.js"></script>
+        <script src="js/default/angular-file-saver.min.js"></script>
+
         <!--CDN'S JS-->
         <script src="js/default/angular-material.min.js"></script>
 
         <!--MY JS-->
-<!--        <script src="js/default/fabric.js"></script>-->
         <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
         <script src="resources/lang/italian.js"></script>
