--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <ui-view></ui-view>
 
+
         <!--DEFAULT JS-->
         <script src="js/default/angular.min.js"></script>
         <script src="js/default/angular-ui-router.min.js"></script>
@@ -57,6 +58,8 @@
         <script src="js/main.js"></script>
         <script src="resources/lang/italian.js"></script>
         <script src="js/controllers.js"></script>
+        <script src="js/home_controller.js"></script>
+        <script src="js/home_service.js"></script>
         <script src="js/services.js"></script>
     </body>
 </html>
