--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/canvas.css">
         <link rel="stylesheet" href="css/menu.css">
         <link rel="stylesheet" href="css/popup.css">
+        <link rel="stylesheet" href="css/categories_legend.css">
         <link href="css/default/md-data-table.min.css" rel="stylesheet" type="text/css"/>
 
         <!--CDN'S CSS-->
