--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         <script src="resources/lang/italian.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/home_controller.js"></script>
+        <script src="js/outdoor_controller.js"></script>
         <script src="js/home_service.js"></script>
+        <script src="js/outdoor_service.js"></script>
         <script src="js/services.js"></script>
     </body>
 </html>
