--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         <script src="js/controllers.js"></script>
         <script src="js/home_controller.js"></script>
         <script src="js/outdoor_controller.js"></script>
+        <script src="js/canvas_controller.js"></script>
         <script src="js/home_service.js"></script>
         <script src="js/outdoor_service.js"></script>
+        <script src="js/canvas_service.js"></script>
         <script src="js/services.js"></script>
     </body>
 </html>
