--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="js/configuration.js"></script>
 
         <!--CDN'S JS-->
-        <script src="js/default/markerclusterer.js"></script>
+<!--        <script src="js/default/markerclusterer.js"></script>-->
         <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&libraries=drawing" async defer></script>
     </head>
@@ -67,6 +67,7 @@
         <script src="js/outdoor_controller.js"></script>
         <script src="js/canvas_controller.js"></script>
         <script src="js/toast_controller.js"></script>
+        <script src="js/table_with_hidden_columns_controller.js"></script>
         <script src="js/home_service.js"></script>
         <script src="js/outdoor_service.js"></script>
         <script src="js/canvas_service.js"></script>
