V 3.11.1 ADDED JS.MAP FILES
- Added the files map for the js libraries so that chrome does not give the warning

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         <!--DEFAULT JS-->
         <script src="js/default/angular.min.js"></script>
+        <!-- <script src="js/default/angular.min.js.map"></script> -->
         <script src="js/default/angular-ui-router.min.js"></script>
         <script src="js/default/ng-map.min.js"></script>
         <script src="js/default/angular-route.js"></script>
