--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <script src="js/configuration.js"></script>
 
         <!--CDN'S JS-->
-<!--        <script src="js/default/markerclusterer.js"></script>-->
-        <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+       <script src="js/default/markerclustererplus.min.js"></script>
+        <!-- <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script> -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRkPToSWF3vruJ_sY_OpaK15QB-pNuaZs&libraries=drawing" async defer></script>
     </head>
 
