--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link href="https://fonts.googleapis.com/css?family=Iceberg|Kodchasan|Nova+Cut|Oswald" rel="stylesheet">
 
         <!--LOCAL JS-->
+        <script src="js/default/crypto-js.min.js"></script>
         <script src="js/configuration.js"></script>
 
         <!--CDN'S JS-->
