--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
         <!--CDN'S JS-->
         <script src="js/default/angular-material.min.js"></script>
+        <script src="js/default/fixed-table-header.js"></script>
 
         <!--MY JS-->
         <script src="js/helper.js"></script>
